{
    "name": "Controls",
    "maps": [
        {
            "name": "PlayerMov",
            "id": "01adc796-1933-4423-8ce9-190982c2f779",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "a0ed19aa-b5c0-48f0-881c-d68ceb5a62c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0de984cb-9a74-406d-b781-de3d5be35897",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "f01986ab-6166-4522-8cc7-cf7818a6cf34",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "11f1264a-0e95-4476-8acf-ca62b9c7ce30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "69cc1caa-f904-482c-9c9c-27a3ba5d64a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraRotation",
                    "type": "Value",
                    "id": "9a45d350-f377-4058-97b1-e722f59e7373",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TeleportAttribute",
                    "type": "Button",
                    "id": "6d5d2ab1-c8fd-4235-a3b1-3dccffdb1705",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StunAttribute",
                    "type": "Button",
                    "id": "fa51953a-46aa-4a3a-a4b7-12b9ac5d2517",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "5263876c-0e6a-471d-8cce-fe2f076146e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "4b3e6422-a801-41df-ba80-7ffb117e485a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "AOEattack",
                    "type": "Button",
                    "id": "bc8210f9-7caf-4612-9e7b-676752b44178",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "dcb36894-ae0e-4314-b7e7-7982d5f02d77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "6fb932b9-a6dd-4d12-964a-7ab9eb66d0f0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "27fbab5d-dab4-4f11-8f07-57621fb590f6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "57a285a6-2bac-45f8-857e-40885cd79e2c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6866ebf9-605b-42d3-aa00-bb1c45849d7b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3d3754f4-1f81-4863-86a1-11194c0e16df",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3bf8b9f9-3e47-466c-9cab-7f997bc8f8e5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "386c3073-e48e-4f22-93c4-18d25e0e70eb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50ca0c94-53c0-4a8b-bde5-86b6413385a6",
                    "path": "<Keyboard>/shift",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfe73743-81a3-434b-a0d1-907f51f198ac",
                    "path": "<Keyboard>/shift",
                    "interactions": "Hold(duration=0.21)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cd75906b-fae9-4ffc-a0ea-1f3951d6c5f6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "80c2de96-8552-4400-b420-ac617d9776d3",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "80f27bc9-e197-4ed0-872b-dbdf701488f0",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0bb5a7e6-e7a5-44a8-8b37-7fa2d52ce371",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TeleportAttribute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb14b413-0080-4384-8ee8-c8ae8e435bc1",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StunAttribute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53eba878-f37e-4345-862a-0e7bb060c7da",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9fdbf232-e262-4cec-a231-c2eed4900721",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.21)",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef4621c9-2625-4b4c-a852-b3b2e4b6466d",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AOEattack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb1281e3-596b-46c7-9368-a524d1d7ebc3",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}